tests: Rename "src" folder to "tests"
- Remove useless line breaks in test-module.ts

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,5 +5,5 @@
       "jest"
     ]
   },
-  "files": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+  "files": ["tests/**/*.spec.ts", "tests/**/*.d.ts"]
 }
