--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-jest-mock-import-meta",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A simple Typescript AST transformer for ts-jest, that mock import.meta expressions.",
   "keywords": [
     "ts-jest",
@@ -32,12 +32,11 @@
     "README.md"
   ],
   "devDependencies": {
-    "@types/jest": "^28.1.1",
-    "esbuild": "^0.14.43",
-    "jest": "^28.0.0",
-    "rollup": "^2.75.6",
-    "ts-jest": "^28.0.4",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "@types/jest": "29.5.3",
+    "esbuild": "0.19.2",
+    "jest": "29.6.3",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
+    "typescript": "5.1.6"
   }
 }
